frontend/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-frontend
spec:
  selector:
    app: nginx-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
